# KBWeaver

./: .gitignore  ARCHITECTURE.md  PRD.md  README.md  kbweaver.toml  pyproject.toml
.agents/artifacts/: 20260421_165142_documentation_fixes_walkthrough.md
.agents/reports/: 20260424_153553_migrate_to_uv.md  20260424_181800_initial_implementation.md  20260424_184100_write_readme.md  20260426_190730_test_app_as_new_user.md
.agents/workflows/: commit.md  yolo_economy.md
docs/: ARCHITECTURE.md  COMPETITIVE_LANDSCAPE.md  PRD.md  TECH_SPEC.md  Techspec.md  USAGE_TUTORIAL.md
kbweaver/: __init__.py  agent.py  cli.py  config.py  database.py  ingestion.py  linter.py  models.py  prompts.py  query.py  timing.py  watcher.py  wiki.py
kbweaver/llm/: base.py  factory.py  ollama.py
tests/: test_config.py  test_database.py  test_models.py
